# modern_crypto_project_1

./: .gitignore  LICENSE  Makefile.am  configure.ac  initialize.sh
doc/: .document.tex.swp  document.aux  document.tex  document.toc  title.tex  title.tex~
include/: Dictionary1.txt  break_utils.h  dictionary1.h  dictionary2.h  polyalpha_decrypt.h  trillables.h
scripts/: billable_analysis.py  build_offset_table.py  minimum_word_prefix.py  polyalpha_encrypt.py  trillable_analysis.py
src/: Makefile.am  break_utils.c  polyalpha_decrypt.c
tests/: Makefile.am  check_break_utils  check_break_utils.c  check_input_control.c  check_polyalpha_decrypt.c
